--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,7 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:id="@+id/container"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:paddingTop="?attr/actionBarSize">
+  android:layout_height="match_parent">
 
   <com.google.android.material.bottomnavigation.BottomNavigationView
     android:id="@+id/nav_view"
@@ -32,4 +31,13 @@
     app:navGraph="@navigation/mobile_navigation"
     />
 
+  <fragment
+    android:id="@+id/mapFragment"
+    android:name="com.tomtom.online.sdk.map.MapFragment"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/size_none"
+    app:layout_constraintBottom_toTopOf="@+id/nav_view"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
