--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,7 @@
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    app:navGraph="@navigation/mobile_navigation"
-    />
+    app:navGraph="@navigation/mobile_navigation"/>
 
   <fragment
     android:id="@+id/mapFragment"
@@ -40,4 +39,44 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"/>
+
+  <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/layout_edittext"
+    android:layout_width="@dimen/size_none"
+    android:layout_height="@dimen/layout_height_xlarge"
+    android:background="@color/white_fully_opaque"
+    android:paddingBottom="@dimen/spacing_small"
+    app:layout_constraintBottom_toTopOf="@+id/nav_view"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent">
+
+    <EditText
+      android:id="@+id/edittext_main_poisearch"
+      android:layout_width="@dimen/size_none"
+      android:layout_height="@dimen/size_none"
+      android:layout_marginStart="@dimen/spacing_small"
+      android:background="@android:color/transparent"
+      android:hint="@string/poisearch_hint"
+      android:imeOptions="actionSearch"
+      android:textSize="@dimen/text_size_normal"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@+id/btn_main_poisearch"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      android:inputType="text" />
+
+    <ImageButton
+      android:id="@+id/btn_main_poisearch"
+      android:layout_width="wrap_content"
+      android:layout_height="@dimen/size_none"
+      android:layout_marginEnd="@dimen/spacing_small"
+      android:layout_marginTop="@dimen/spacing_xtiny"
+      android:adjustViewBounds="true"
+      android:background="@android:color/transparent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@android:drawable/ic_menu_search" />
+
+  </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
