--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
   <dimen name="spacing_small">10dp</dimen>
   <dimen name="text_size_small">12sp</dimen>
   <dimen name="text_size_normal">14sp</dimen>
+  <dimen name="login_button_padding">8dp</dimen>
 </resources>
