--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
   <fragment
     android:id="@+id/navigation_home"
-    android:label="@string/title_home"
+    android:label="@string/app_name"
     android:name="edu.cnm.deepdive.grassrootseasysteps.controller.ui.home.HomeFragment"
     tools:layout="@layout/fragment_home"/>
 
   <fragment
     android:id="@+id/navigation_dashboard"
-    android:label="@string/title_dashboard"
+    android:label="@string/new_search"
     android:name="edu.cnm.deepdive.grassrootseasysteps.controller.ui.dashboard.DashboardFragment"
     tools:layout="@layout/fragment_dashboard"/>
 
   <fragment
     android:id="@+id/navigation_notifications"
-    android:label="@string/title_notifications"
+    android:label="@string/previous_searches"
     android:name="edu.cnm.deepdive.grassrootseasysteps.controller.ui.notifications.NotificationsFragment"
     tools:layout="@layout/fragment_notifications"/>
 </navigation>
