--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,16 +5,40 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent">
 
-  <TextView
-    android:id="@+id/text_home"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
-    android:textAlignment="center"
-    android:textSize="20sp"
-    app:layout_constraintEnd_toEndOf="parent"
+ <fragment
+   android:id="@+id/mapFragment"
+   android:name="com.tomtom.online.sdk.map.MapFragment"
+   android:layout_width="match_parent"
+   android:layout_height="0dp"
+   app:layout_constraintBottom_toTopOf="@+id/edittext_main_poisearch"
+   app:layout_constraintEnd_toEndOf="parent"
+   app:layout_constraintStart_toStartOf="parent"
+   app:layout_constraintTop_toTopOf="parent"/>
+
+  <EditText
+    android:id="@+id/edittext_main_poisearch"
+    android:layout_width="@dimen/size_none"
+    android:layout_height="@dimen/size_none"
+    android:layout_marginStart="@dimen/spacing_small"
+    android:background="@android:color/transparent"
+    android:hint="@string/poisearch_hint"
+    android:imeOptions="actionSearch"
+    android:textSize="@dimen/text_size_normal"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toStartOf="@+id/btn_main_poisearch"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
+    android:inputType="text" />
+
+  <ImageButton
+    android:id="@+id/btn_main_poisearch"
+    android:layout_width="wrap_content"
+    android:layout_height="@dimen/size_none"
+    android:layout_marginEnd="@dimen/spacing_small"
+    android:layout_marginTop="@dimen/spacing_xtiny"
+    android:adjustViewBounds="true"
+    android:background="@android:color/transparent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:srcCompat="@android:drawable/ic_menu_search" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
